# awesome-llm-apps

./: .gitignore  pyproject.toml
ai_agent_tutorials/ai_data_visualisation_agent/: ai_data_visualisation_agent.py
chat_with_X_tutorials/chat_with_pdf/: chat_pdf.py
test/: test_01_SSL.py  test_02_SSL_inject.py  test_03_API_keys.py  test_04_UV_sync.py
