[project]
name = "lifehacks-actuarial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "pip>=25.0.1",
    "certifi>=2025.1.31",
    "python-certifi-win32>=1.6.1",
    "serpapi>=0.1.5",
    "google-search-results>=2.4.2",
    "pandas>=2.2.3",
    "xlsxwriter>=3.2.2",
    "pyautogui>=0.9.54",
    "shiny>=1.3.0",
    "flask>=3.1.0",
    "googletrans>=4.0.2",
    "jupyter>=1.1.1",
    "pytest>=8.3.5",
    "together",
    "e2b-code-interpreter",
    "dotenv",
    "truststore",
    "streamlit",
    "embedchain",
]
